--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,6 +20,9 @@
 <div style="padding: 16px;">
   <app-home *ngIf="currentView === 'home'"></app-home>
   <app-products *ngIf="currentView === 'products'"></app-products>
-  <app-cart *ngIf="currentView === 'cart'"></app-cart>
+  <app-cart
+  *ngIf="currentView === 'cart'"
+  [setCurrentView]="setView">
+</app-cart>
   <app-checkout *ngIf="currentView === 'checkout'"></app-checkout>
 </div>
