--- a/src/app/products/products.html
+++ b/src/app/products/products.html
@@ -1,16 +1,17 @@
 <div class="products-grid">
-  <mat-card *ngFor="let product of products" class="product-card">
+  <mat-card *ngFor="let product of products" class="product-card" [class.out-of-stock]="product.stock === 0">
     <img mat-card-image [src]="product.image" [alt]="product.name" />
     <mat-card-header>
       <mat-card-title>{{ product.name }}</mat-card-title>
-      <mat-card-subtitle>{{ product.price | currency:'EUR' }}</mat-card-subtitle>
+      <mat-card-subtitle *ngIf="product.stock > 0">En stock: {{ product.stock }}</mat-card-subtitle>
+      <mat-card-subtitle *ngIf="product.stock === 0" class="out-of-stock-label">Agotado</mat-card-subtitle>
     </mat-card-header>
+
     <mat-card-content>
       <p class="description">{{ product.description }}</p>
-      <p class="stock" [class.low-stock]="product.stock < 5">
-        <mat-icon inline>inventory_2</mat-icon> Stock: {{ product.stock }}
-      </p>
+      <p class="price">{{ product.price | currency:'EUR':'symbol':'1.2-2' }}</p>
     </mat-card-content>
+
     <mat-card-actions>
       <button mat-raised-button color="primary" (click)="addToCart(product)" [attr.aria-label]="'Añadir ' + product.name + ' al carrito'">
         <mat-icon>add_shopping_cart</mat-icon>
